recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: not found: type x
  var double: x = 100;
              ^FourSquare:7: error: not found: value x
  avance(x);
         ^