recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  faireCarre();
}

def faireCarre(){
  var double: x = 100;
  avance(x);
}